# giskard_ide

./: CMakeLists.txt  README.md  default_plugins.xml  package.xml  plugin_description.xml
include/giskard_sim/: color_editor.h  controller_runner.h  controller_widget.h  create_object_dialog.h  datamodel.h  decisive_double_validator.h  giskardsimpanel.h  input_assignments.h  input_frame_widget.h  input_rotation_widget.h  input_scalar_widget.h  input_vector_widget.h  interfaces.h  line_edit.h  object_info_widget.h  pkg_combo_box.h  pkg_file_combo_box.h  plugin_interfaces.h  pose_tree_widget.h  robot_model_display.h  ros_pkg_file_selector.h  scenario_info.h  scenario_instance.h  scene_widget.h  simcontrols.h  simkardpanel.h  tf_combo_box.h  urdf_info.h  utils.h  vector_widget.h
launch/: pr2.launch
resources/: giskard_sim.qrc
robots/: pr2_controlled_joints.yaml  pr2_sim_config.yaml
rosinstall/: catkin.rosinstall
src/: controller_runner.cpp  controller_widget.cpp  create_object_dialog.cpp  default_plugins.cpp  giskardsimpanel.cpp  input_assignments.cpp  input_frame_widget.cpp  input_rotation_widget.cpp  input_scalar_widget.cpp  input_vector_widget.cpp  interactive_test.cpp  object_info_widget.cpp  pkg_combo_box.cpp  pkg_file_combo_box.cpp  pose_tree_widget.cpp  ros_pkg_file_selector.cpp  scenario_info.cpp  scenario_instance.cpp  scene_widget.cpp  simcontrols.cpp  simkardpanel.cpp  tf_combo_box.cpp  urdf_info.cpp  utils.cpp  vector_widget.cpp
test_controllers/: pr2_l_cart_goal.giskard  pr2_rotating_forearm.giskard
test_data/: Test Scenario.yaml  my_scenario.yaml
ui/: controller_widget.ui  create_object_dialog.ui  giskardsimpanel.ui  input_frame_widget.ui  input_rotation_widget.ui  input_scalar_widget.ui  input_vector_widget.ui  object_info.ui  pose_add_joint_item.ui  pose_joint_item.ui  poses_widget.ui  ros_pkg_file_selector.ui  scenario_info.ui  scene_widget.ui  simcontrols.ui  urdf.ui  vector_widget.ui
